syntax = "proto3";

package messenger.auth.protobuf.api.auth_service;

option go_package = "messenger/auth/pkg/api/auth_service";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
 

enum Role{
    ROLE_UNSPECIFIED = 0;
    ROLE_USER = 1;
    ROLE_ADMIN = 2;
};

message CreateRequest{
    string name = 1;
    string email = 2; 
    string password = 3;
    string password_confirm = 4;
    Role role = 5;
};

message CreateResponse{
    int64 id = 1;
};

message GetRequest{
    int64 id = 1;
};

message GetResponse{
    int64 id = 1;
    string name = 2;
    string email = 3;
    Role role = 4;
    google.protobuf.Timestamp create_at = 5;
    google.protobuf.Timestamp update_at = 6;
};

message UpdateRequest{
    int64 id = 1;
    google.protobuf.StringValue name = 2;
    google.protobuf.StringValue email = 3;
};

message DeleteRequest{
    int64 id = 1;
};


